Add refs and index references

--- a/06_mood.Rmd
+++ b/06_mood.Rmd
@@ -7,15 +7,24 @@ output:
 
 # Mood {#mood}
 \index{Mood}
+\index{Mood assessment}
+
+\index{EMA research!Mood disorders}
+\index{EMA research!Substance-related disorders}
+\index{EMA research!Somatic health}
+\index{EMA research!Activity patterns}
 
 Mood is a common outcome in EMA research [@Myin-Germeys2016; @Desmet2016]. Having respondents rate their mood during the day allows researchers to assess mood fluctuation over time or reactivity to events and daily-stressors [@Wenze2010]. Often, it is studied in relation to depressive symptoms and mood disorders [@AanhetRot2012]. In addition, mood can be linked to other variables, such as substance abuse [@Kirchner2013; @Serre2015], somatic health [@Engel2016; @Moore2016] or activity patterns [@Dunton2017; @Marszalek2014].
 
+\index{Mood definitions}
+\index{Mood definitions!Mood states}
+\index{Mood definitions!Emotions}
 The definition of mood varies across studies. Usually the concept refers to a general affective state. Following this line of reasoning, a distinction can be made between mood states (e.g. irritable, cheerful, relaxed, etc.) and discrete emotions (e.g. happy, sad, anxious, etc.), where moods are thought to be less specific and more subjective, enduring and related to context [@Beedie2005; @Cranford2006; @Desmet2016].
 
 Depending on the study focus and research questions, mood measurement can be operationalized in several ways. Therefore, it is vital to consider the goal of measuring mood in your own study and to choose an operationalisation that matches your hypothesis and theoretical framework. In this chapter, we will discuss the most commonly used options: 1) unidimensional mood assessment, 2) the 'bag of items' approach, and 3) dimensional models, namely the Circumplex model and Negative and Positive affect (NA/PA).
 
 ## Unidimensional mood assessment
-\index{Unidimensional mood assessment}
+\index{Mood assessment!Unidimensional}
 Perhaps the most seemingly straight-forward method to measure mood is to ask 'face-valid' unidimensional questions such as "How is your mood right now" [@VanBallegooijen2016] or "How are you feeling right now" [@VandeVen2017].
 Respondents usually rate these questions on a Visual Analogue Scale (VAS), aimed to indicate mood intensity. Typically, VAS scales will range from zero (low or worst mood) to 10 or 100 (good or best mood). Keep in mind that the middle of a VAS scale (e.g. 5 or 50) is generally considered a negative result, and only scores above 6 or 60 are considered acceptable or positive mood states [@Groot2010]. In order to address this issue, some researchers have proposed to use VAS-scales ranging from -1 to 1, with 0 as a neutral centre. However, such a scale implies a mood state that ranges from negative to positive, rather than absent to present. Another alternative is to use Likert scales, where the scale centre often reflects a neutral response.   
 
@@ -35,11 +44,12 @@ print(plotmood_down)
 ```  
 
 ### Bipolar unidimensional items
-\index{Bipolar unidimensional items}
+\index{Mood assessment!Bipolar unidimensional}
 Another option to assist respondents with the interpretation of one-item mood ratings, is to use a bipolar scale. These items place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@Vanrijsbergen2014]. This does assume that the opposing mood states, such as happy and sad, are mutually exclusive and thus cannot occur simultaneously.
 The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also, the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfil formal criteria for relapse (false positives) [@Vanrijsbergen2014]. 
   
 ## Bag-of-Items
+\index{Mood assessment!Bag-of-Items}
 In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questinnaire, rather than one general unipolar item or one bipolar item. For example you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside is that item scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
 
 Combining data from multiple items, such as mood and loneliness, in one graph can provide respondents with insight in the interaction between the constructs. In r two variables can easily be plotted together:
@@ -59,11 +69,14 @@ print(combined)
 ```  
 
 ## Multi-dimensional mood assessment
-\index{Multi-dimensional mood assessment}
+\index{Mood assessment!Multi-dimensional}
 Dimensional models assume that every affective state or emotion should be described by the combined score on (at least) two items, instead of just one. Over the past decades several multi-dimensional models have been specified (for an overview, see @sander2009). In the context of EMA, researchers most often base their items on the Circumplex model [@russell1980circumplex] or the Negative/Positive affect (NA/PA) theory [@watson1985]. 
 
 ### The Circumplex Model
+\index{Mood assessment!Circumplex model}
 \index{Circumplex model}
+\index{Mood assessment!Pick-a-mood scale}
+
 The Circumplex Model of affect [@russell1980circumplex; @Posner2005] argues that all mood states are a linear combination of two independent, bipolar scales: valence (ranging from low to high arousal) and affect (ranging from unpleasant to pleasant). Combining scores on these scales places the affective states in a circle on one of four quadrants (\@ref(fig:fig09c)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated. 
 
 ```{r fig09c, fig.cap = "Russell's Circumplex model of affect.", echo = FALSE, out.width = '60%'}
@@ -85,7 +98,11 @@ knitr::include_graphics("images/outcomes/Circumplex-Pick-A-Mood.png")
 ```
 
 ### Negative & Positive Affect
-\index{Negative Affect} \index{Positive Affect}
+\index{Positive and Negative Affect}
+\index{Mood assessment!PA/NA} 
+\index{Positive Affect|see{Mood assessment!PA/NA}} 
+\index{Positive and Negative Affect!PANAS|see{Mood assessment}}
+
 Watson and Tellegen [@watson1985] also specified the underlying theory of the Circumplex model, arguing that the diagonal quadrants represent Positive and Negative affect (PA/NA) and that these two terms are the main dimensions of affect [@Watson1999]. PA ranges from sadness to high energy, NA from calmness to distress [@Watson1988]. While bipolar-unidimensional assessment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these mood states can occur simultaneously. Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32). 
 In order to measure Positive and Negative Affect, a designated Positive and Negative Affect Schedule was developed by Watson, Clark and Tellegen [@Watson1988]. Respondents are asked to indicate "to what extent you feel this way right now" on 20 affect items. The scale uses a 5-point Likert-scale, ranging from 1 (very slightly or not at all) to 5 (very) [@Watson1999]. Items include:
 
