--- a/book.bib
+++ b/book.bib
@@ -320,6 +320,27 @@
   url     = {http://studiolab.ide.tudelft.nl/diopd/library/tools/pick-a-mood/},
 }
 
+@article{Dogan2017,
+  title={Smartphone-based monitoring of objective and subjective data in affective disorders: Where are we and where are we going? Systematic review},
+  author={Dogan, Ezgi and Sander, Christian and Wagner, Xenija and Hegerl, Ulrich and Kohls, Elisabeth},
+  journal={Journal of medical Internet research},
+  volume={19},
+  number={7},
+  year={2017},
+  publisher={JMIR Publications Inc.}
+}
+
+@article{Dubad2018,
+  title={A systematic review of the psychometric properties, usability and clinical impacts of mobile mood-monitoring applications in young people},
+  author={Dubad, M and Winsper, C and Meyer, C and Livanou, M and Marwaha, S},
+  journal={Psychological medicine},
+  volume={48},
+  number={2},
+  pages={208--228},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
 @Article{Dunton2017,
   author          = {Dunton, Genevieve Fridlund},
   title           = {{Ecological momentary assessment in physical activity research}},
