--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -5,13 +5,13 @@
 # What is EMA and why do we need it? {#introduction}
 
 \index{EMA} 
-\index{EMA!Synonyms} 
-\index{Ambulatory Assessment{EMA!Synonyms}} 
-\index{Experience Sampling|see{EMA!Synonyms}} 
-\index{Ambulatory Self-reporting|see{EMA!Synonyms}} 
-\index{Real-time Data Capturing|see{EMA!Synonyms}} 
-\index{Continuous Unified Electronic Diary Method|see{EMA!Synonyms}}
-\index{Intensive-longitudinal Study Design|see{EMA!Synonyms}}
+\index{EMA synonyms} 
+\index{EMA synonyms!Ambulatory Assessment} 
+\index{EMA synonyms!Experience Sampling} 
+\index{EMA synonyms!Ambulatory Self-reporting} 
+\index{EMA synonyms!Real-time Data Capturing} 
+\index{EMA synonyms!Continuous Unified Electronic Diary Method} 
+\index{EMA synonyms!Intensive-longitudinal Study Design} 
 
 Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experience Sampling' [@Larson1983], 'Ambulatory Assessment' [@EbnerPriemer2009] or 'Ambulatory Self-reporting' [@Conner2012a], 'Real-time Data Capturing', the 'Continuous Unified Electronic Diary Method' [@EllisDavies2012], and as the 'Intensive-longitudinal Study Design' [@Bolger2013]. The different terms stress different aspects of EMA research. All terms, however, refer to research methods that involve the repeated sampling of people's current thoughts, emotions, behaviour, physiological states, and context, in their natural environment, typically (but not necessary) via electronic wearable devices [@Shiffman2008].
 
@@ -22,8 +22,8 @@ With the increased adoption of EMA, comes a growing need for methodological guid
 ## What is EMA?
 
 ### Self-report versus Observational EMA
-\index{EMA!Self-report EMA} \index{EMA!Active EMA|see{Self-report EMA}}
 \index{EMA!Observational EMA} \index{EMA!Passive EMA|see{Observational EMA}}
+\index{EMA!Self-report EMA} \index{EMA!Active EMA|see{Self-report EMA}}
 
 In EMA research, there are two forms of data collection: EMA based on self-report (active) and EMA based on observational (passive) data. Self-report requires participants to provide information, for example by rating their current mood, activities or social interaction on items that are presented to them during EMA. For observational EMA, information is collected through wearables or logfiles without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media. Some studies combine both forms of data collection, for example by using both a self-report sleep diary and an accelerometer in order to study sleeping patterns [@Meijden2016]. 
 
@@ -113,24 +113,26 @@ ggplot(csd, aes(x = date, y = as.numeric(mood_down))) +
 A key feature of EMA is the capture of data in real-world environments as subjects go about their daily activities, as opposed to data collection within a controlled lab or research setting [@Shiffman2008]. Thus, EMA data provides ecological validity and can better generalize to the subject’s lived experience or real world. Practical applications derived from the data would be more relevant and useful to life situations.  
 
 
-  
+
 ## EMA research
+\index{Wearables}
+\index{Sensors|see{Wearables}
+
 The use of EMA in mental health research might seem novel but this methodology has a long track record. With the expansion of mobile technologies in recent years, EMA-based research in mental health has produce an impressive trove of findings that have supported and sometimes, challenged existing theories on behaviour. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomized controlled trials on a wide range of topics and populations. Enough results have been generated for systematic reviews and meta-analyses pubished in recent years. Below is a non-exhaustive summary of these systematic reviews or meta-analyses.
 
 ### Self-report EMA
-\index{Self-report EMA}
+\index{EMI}
 
-Mood disorders have been well-studied using EMA methods [@Wenze2010] with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], depression/bipolar disorder [@AanhetRot2012].The potential of EMA for use among young populations showed promising results (Dubad, 2018). Innovations in mobile devices has improved the feasibility and popularity of ecological momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A systematic review and meta-analyis of EMIs reported small to medium effects on mental health [(@Versluis2016].  
+Mood disorders have been well-studied using EMA methods [@Wenze2010] with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], depression/bipolar disorder [@AanhetRot2012].The potential of EMA for use among young populations showed promising results [@Dubad2018]. Innovations in mobile devices has improved the feasibility and popularity of ecological momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A systematic review and meta-analyis of EMIs reported small to medium effects on mental health [(@Versluis2016].  
 
 EMA is particularly suited to examine the role of emotions in development and maintenance of obesity and eating disorders [@Engel2016]. Meta-analytic results suggest that negative affect, rather than hunger, is associated with binge eating among individuals with eating disorders [@Haedt2011; @Haedt2012].
 
 EMA methods have significantly contributed to the understanding of the processes that drive substance use, cessation, and relapse, often in contrast with theory-driven studies largely derived from global reports collected through questionnaires [@Shiffman2009; @Swendsen2016].
 
 ### Passive EMA
-\index{Passive sensing|see{EMA!Observational EMA}}
-\index{Passive EMA|see{EMA!Observational EMA}}
+\index{EMA!Passive sensing|see{Observational EMA}}
 
-Objective EMA data collected passively through biosensors, smart devices, or context/environmental (e.g. location) is a feasible and promising method for the longitudinal monitoring of individuals with affective disorders [Dogan, 2017; @kirchner2016].       
+Objective EMA data collected passively through biosensors, smart devices, or context/environmental (e.g. location) is a feasible and promising method for the longitudinal monitoring of individuals with affective disorders [@Dogan2017; @kirchner2016].       
 
 The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. Compared with traditional self-reports, passive sensing is less intrusive and provides more accurate data, continual monitoring, and feedback. 
 
@@ -141,13 +143,18 @@ In general, the reviews conclude that EMA is feasible and has the potential to m
 \index{Limitations!Feasibility}
 \index{Limitations!Privacy}
 
--	Generalizability of results due to selected samples, e.g. hospital in-patients [@burton2013], small sample size (Dogan, 2017)
+-	Generalizability of results due to selected samples, e.g. hospital in-patients [@burton2013], small sample size [@Dogan2017]
 -	Practice effect [@Telford2012], reactivity and compliance [@Shiffman2009]
 -	Issues of feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
 -	Issues of privacy, consent, and awareness [@Cornet2017]
 -	Responsibility of researcher, e.g. in suicide ideation research [@Wenze2010]
 - Methodology issues (Dubad, 2018)
 
+\index{EMA research!Anxiety disorders}
+\index{EMA research!Eating disorders}
+\index{EMA research!Mood disorders}
+\index{EMA research!Substance-related disorders}
+\index{EMA research!Mental health/ Well-being}
 
 Table: (\#tab:emareviews) Reviews of EMA studies targeting specific Mental
 Health Conditions
@@ -171,11 +178,11 @@ Health Conditions
 | | @Versluis2016 | Provides an overview of interventions (EMI) addressing anxiety, depression, and perceived stress on positive psychological outcomes |
 | | Dubad (2018) | Provides an overview of the feasibility and efficacy of mood-monitoring applications for use among young populations (10-24 years old) |
 | | | |
-| Substance abuse| | |
+| Substance-related disorders| | |
 | | @Shiffman2009 | Review of processes that drive substance use, cessation, and relapse, sometimes in contrast with theory-driven studies that are largely derived from global reports collected through questionnaires |
 | | @Swendsen2016 | Conceptual review of the use of mobile technologies for research on addiction and its treatment |
 | | | |
 | Mental health/ Well-being | | |
 | | @Cornet2017 | Outlines the potential of passive sensing to detect status change and behaviour change following feedback on behaviour. Also outlines the challenges of using passive sensing |
 | | @kirchner2016 | Provides an overview of geographically explicit momentary assessment (GEMA) research to enrich EMA research in mental health and well-being |
-| | Dogan (2017) | Provides an overview of studies that combined subjective ratings with objective-collected EMA using smartphone-based systems |
+| | @Dogan2017 | Provides an overview of studies that combined subjective ratings with objective-collected EMA using smartphone-based systems |
